force-app/main/default/objects/Lead/fields/AbriuModalAgendamento__c.field-meta.xml
<CustomField>
    <fullName>AbriuModalAgendamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abriu Modal Agendamento</label>
    <type>Checkbox</type>
</CustomField>