force-app/main/default/objects/Lead/fields/Acomodacao__c.field-meta.xml
<CustomField>
    <fullName>Acomodacao__c</fullName>
    <label>Acomodação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>