force-app/main/default/objects/Lead/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <description>Campo utilizado pelo Marketing Cloud para definir a campanha vinculadas ao lead</description>
    <label>Campanha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensalidade Grátis</fullName>
            </value>
            <value>
                <fullName>Mensalidade Grátis - Individual</fullName>
            </value>
            <value>
                <fullName>Mensalidade Grátis - MEI</fullName>
            </value>
            <value>
                <fullName>Mensalidade Grátis - PME</fullName>
            </value>
            <value>
                <fullName>Black November 2021 Individual</fullName>
            </value>
            <value>
                <fullName>Black November 2021 MEI</fullName>
            </value>
            <value>
                <fullName>Black November 2021 PME</fullName>
            </value>
            <value>
                <fullName>Leads Perdidos Recuperados - régua de emails</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Bem Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>