force-app/main/default/objects/Lead/fields/CANAL_CALL_CENTER__c.field-meta.xml
<CustomField>
    <fullName>CANAL_CALL_CENTER__c</fullName>
    <formula>IF( CanalProprietario__c = &quot;&quot;,   Owner:Queue.QueueName  , CanalProprietario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CANAL/CALL CENTER</label>
    <type>Text</type>
</CustomField>