force-app/main/default/objects/Lead/fields/CanalCriador__c.field-meta.xml
<CustomField>
    <fullName>CanalCriador__c</fullName>
    <formula>text(CreatedBy.CANAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal do Criador</label>
    <type>Text</type>
</CustomField>