force-app/main/default/objects/Lead/fields/CanalEntrada__c.field-meta.xml
<CustomField>
    <fullName>CanalEntrada__c</fullName>
    <label>Canal de Entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento Loja</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Blended - AeC</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Promotor</fullName>
            </value>
            <value>
                <fullName>Prospecção</fullName>
            </value>
            <value>
                <fullName>Receptivo - AeC</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Indicação interna UnimedBH</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>e-Commerce</fullName>
            </value>
            <value>
                <fullName>Hotsite: Soluções Empresa</fullName>
            </value>
            <value>
                <fullName>Ação Araujo</fullName>
            </value>
            <value>
                <fullName>Levantada de mão - Portal</fullName>
            </value>
            <value>
                <fullName>Levantada de mão - Bem Digital</fullName>
            </value>
            <value>
                <fullName>Levantada de mão - Página de Planos</fullName>
            </value>
            <value>
                <fullName>Fala Cliente</fullName>
            </value>
            <value>
                <fullName>RN DE</fullName>
            </value>
            <value>
                <fullName>Base leads Salesforce sem proprietário</fullName>
            </value>
            <value>
                <fullName>Leads Facebook</fullName>
            </value>
            <value>
                <fullName>Mensagens ou comentários Redes Sociais</fullName>
            </value>
            <value>
                <fullName>Ex Cliente Unimed-BH</fullName>
            </value>
            <value>
                <fullName>Nuvidio</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Desconhecido</fullName>
            </value>
            <value>
                <fullName>Levantada de Mão</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Páginas ou Campanhas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>