force-app/main/default/objects/Lead/fields/ClassificacaoMotivoNaoAgendamento__c.field-meta.xml
<CustomField>
    <fullName>ClassificacaoMotivoNaoAgendamento__c</fullName>
    <formula>CASE(1,
IF( TEXT(HouveAgendamento__c) == &apos;Sim&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(HouveAgendamento__c) == &apos;&apos;,1,0),&apos;NÃO EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Acho alto o valor do plano&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Troca de plano&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Deseja plano com abrangência nacional&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Vai pensar/avaliar&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;RN acima de 28 dias&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Cancelamento/Reagendamento de visita ou confirmação&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Informação para Terceiros&apos;,1,0),&apos;EFETIVO&apos;,
IF( TEXT(MotivoNaoAgendamento__c) == &apos;Cliente optou por ir à loja&apos;,1,0),&apos;EFETIVO&apos;,

IF( TEXT(MotivoNaoAgendamento__c) == &apos;&apos;,1,0),&apos;&apos;,
&apos;NÃO EFETIVO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classificação motivo não agendamento</label>
    <type>Text</type>
</CustomField>