force-app/main/default/objects/Lead/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <label>Dados cadastrais - Descrição do CNAE Pri</label>
    <length>100</length>
    <type>Text</type>
</CustomField>