force-app/main/default/objects/Lead/fields/CnpjFormatado__c.field-meta.xml
<CustomField>
    <fullName>CnpjFormatado__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CNPJ__c, &quot;.&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CnpjFormatado</label>
    <type>Text</type>
</CustomField>