force-app/main/default/objects/Lead/fields/Cod_Grupo_Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Cod_Grupo_Cancelado__c</fullName>
    <label>Cod Grupo Cancelado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>