force-app/main/default/objects/Lead/fields/CompetenciaUltimaTransferencia__c.field-meta.xml
<CustomField>
    <fullName>CompetenciaUltimaTransferencia__c</fullName>
    <formula>CASE(1,
IF((( LastTransferDate &gt;= DATE(2020,12,17) &amp;&amp; LastTransferDate &lt;= DATE(2021,01,20)) || ISBLANK(CreatedDate)),1,0),&apos;Janeiro&apos;,

IF(( LastTransferDate &gt;= DATE(2021,01,21) &amp;&amp; LastTransferDate &lt;= DATE(2021,02,17)),1,0),&apos;Fevereiro&apos;,

IF(( LastTransferDate &gt;= DATE(2021,02,18) &amp;&amp; LastTransferDate &lt;= DATE(2021,03,22)),1,0),&apos;Março&apos;,

IF(( LastTransferDate &gt;= DATE(2021,03,23) &amp;&amp; LastTransferDate &lt;= DATE(2021,04,19)),1,0),&apos;Abril&apos;,

IF((  LastTransferDate &gt;= DATE(2021,04,20) &amp;&amp; LastTransferDate &lt;= DATE(2021,05,20)),1,0),&apos;Maio&apos;,

IF(( LastTransferDate &gt;= DATE(2021,05,21) &amp;&amp; LastTransferDate &lt;= DATE(2021,06,21)),1,0),&apos;Junho&apos;,

IF(( LastTransferDate &gt;= DATE(2021,06,22) &amp;&amp; LastTransferDate &lt;= DATE(2021,07,20)),1,0),&apos;Julho&apos;,

IF(( LastTransferDate &gt;= DATE(2021,07,21) &amp;&amp; LastTransferDate &lt;= DATE(2021,08,20)),1,0),&apos;Agosto&apos;,

IF(( LastTransferDate &gt;= DATE(2021,08,23) &amp;&amp; LastTransferDate &lt;= DATE(2021,09,21)),1,0),&apos;Setembro&apos;,

IF(( LastTransferDate &gt;= DATE(2021,09,22) &amp;&amp; LastTransferDate &lt;= DATE(2021,10,20)),1,0),&apos;Outubro&apos;,

IF(( LastTransferDate &gt;= DATE(2021,10,21) &amp;&amp; LastTransferDate &lt;= DATE(2021,11,19)),1,0),&apos;Novembro&apos;,

IF(( LastTransferDate &gt;= DATE(2021,11,22) &amp;&amp; LastTransferDate &lt;= DATE(2021,12,17)),1,0),&apos;Dezembro&apos;,

&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competência Última Transferência</label>
    <type>Text</type>
</CustomField>