force-app/main/default/objects/Lead/fields/ConsultorApresentouProposta__c.field-meta.xml
<CustomField>
    <fullName>ConsultorApresentouProposta__c</fullName>
    <label>Consultor que apresentou a proposta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>