force-app/main/default/objects/Lead/fields/ConsultorPrimeiraVisita__c.field-meta.xml
<CustomField>
    <fullName>ConsultorPrimeiraVisita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consultor da Primeira Visita ao Lead</description>
    <inlineHelpText>Este campo se preenche somente quando um consultor é designado á visita</inlineHelpText>
    <label>Consultor da Primeira Visita</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>