force-app/main/default/objects/Lead/fields/ConsultorUltimaVisita__c.field-meta.xml
<CustomField>
    <fullName>ConsultorUltimaVisita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Este campo se preenche somente quando um consultor é designado á visita</inlineHelpText>
    <label>Consultor da Última Visita</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Leads (Consultor da Última Visita)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>