force-app/main/default/objects/Lead/fields/ConvertDataDelete__c.field-meta.xml
<CustomField>
    <fullName>ConvertDataDelete__c</fullName>
    <formula>TODAY() - DateValue(DataLeadPerdido__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ConvertDataDelete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>