force-app/main/default/objects/Lead/fields/CorretoraResponsavel__c.field-meta.xml
<CustomField>
    <fullName>CorretoraResponsavel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corretora responsável</label>
    <type>Checkbox</type>
</CustomField>