force-app/main/default/objects/Lead/fields/CorretoraVinculada__c.field-meta.xml
<CustomField>
    <fullName>CorretoraVinculada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretora Vinculada</label>
    <referenceTo>Corretora__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>