force-app/main/default/objects/Lead/fields/Covid__c.field-meta.xml
<CustomField>
    <fullName>Covid__c</fullName>
    <label>Indicador de impacto (Covid-19)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixo</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Crítico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>