force-app/main/default/objects/Lead/fields/CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJ__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CPFCNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>