force-app/main/default/objects/Lead/fields/CPFCNPJId__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJId__c</fullName>
    <formula>IF(NOT(ISBLANK(CPF__c)) &amp;&amp; NOT(CONTAINS(TipoAtendimento__c, &apos;Jurídica&apos;)), SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CPF__c, &quot;.&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;),SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(CNPJ__c, &quot;.&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;))</formula>
    <label>CPFCNPJId</label>
    <type>Text</type>
</CustomField>