force-app/main/default/objects/Lead/fields/CriadoCallCenter__c.field-meta.xml
<CustomField>
    <fullName>CriadoCallCenter__c</fullName>
    <formula>CONTAINS( CreatedBy.FirstName , &apos;AEC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Criado pelo Call Center</label>
    <type>Checkbox</type>
</CustomField>