force-app/main/default/objects/Lead/fields/CustoOperadoraAtual__c.field-meta.xml
<CustomField>
    <fullName>CustoOperadoraAtual__c</fullName>
    <label>Custo na operadora atual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>