force-app/main/default/objects/Lead/fields/Data_do_cancelamento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_cancelamento__c</fullName>
    <label>Data do cancelamento</label>
    <type>Date</type>
</CustomField>