force-app/main/default/objects/Lead/fields/DATA_VENDA_OPORTUNIDADE__c.field-meta.xml
<CustomField>
    <fullName>DATA_VENDA_OPORTUNIDADE__c</fullName>
    <formula>OPORTUNIDADE__r.DataVenda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATA VENDA OPORTUNIDADE</label>
    <type>Date</type>
</CustomField>