force-app/main/default/objects/Lead/fields/DATA_VIGENCIA_OPORTUNIDADE__c.field-meta.xml
<CustomField>
    <fullName>DATA_VIGENCIA_OPORTUNIDADE__c</fullName>
    <formula>OPORTUNIDADE__r.DataVigenciaContrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATA VIGENCIA OPORTUNIDADE</label>
    <type>Date</type>
</CustomField>