force-app/main/default/objects/Lead/fields/DataAtendimento__c.field-meta.xml
<CustomField>
    <fullName>DataAtendimento__c</fullName>
    <formula>BLANKVALUE( DataDoAtendimento__c , DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do Atendimento / Cadastro</label>
    <type>Date</type>
</CustomField>