force-app/main/default/objects/Lead/fields/DataCorteRN__c.field-meta.xml
<CustomField>
    <fullName>DataCorteRN__c</fullName>
    <label>Data corte RN</label>
    <type>Date</type>
</CustomField>