force-app/main/default/objects/Lead/fields/DataDoAtendimento__c.field-meta.xml
<CustomField>
    <fullName>DataDoAtendimento__c</fullName>
    <label>Data do Atendimento</label>
    <type>Date</type>
</CustomField>