force-app/main/default/objects/Lead/fields/DataLeadPerdido__c.field-meta.xml
<CustomField>
    <fullName>DataLeadPerdido__c</fullName>
    <description>Armazena a última data em que o lead foi para o status Perdido</description>
    <label>Data em que o lead foi perdido</label>
    <type>DateTime</type>
</CustomField>