force-app/main/default/objects/Lead/fields/DataNascimentoCrianca__c.field-meta.xml
<CustomField>
    <fullName>DataNascimentoCrianca__c</fullName>
    <label>Data de nascimento da criança</label>
    <type>Date</type>
</CustomField>