force-app/main/default/objects/Lead/fields/DataPrimeiraVisita__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiraVisita__c</fullName>
    <description>Data da Primeira Visita ao Lead</description>
    <label>Data da Primeira Visita</label>
    <type>DateTime</type>
</CustomField>