force-app/main/default/objects/Lead/fields/DataRecebimentoLead__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimentoLead__c</fullName>
    <description>Armazena a data que o lead foi atribuido pela primeira vez para equipe do comercial.
Campo utilizado pela área de marketing</description>
    <inlineHelpText>Armazena a data em que o lead foi atribuído pela primeira vez para equipe de vendas.
Campo utilizado pela área de marketing</inlineHelpText>
    <label>Data de Recebido do Lead</label>
    <type>Date</type>
</CustomField>