force-app/main/default/objects/Lead/fields/DataUltimaPropostaApresentada__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaPropostaApresentada__c</fullName>
    <label>Data da última proposta apresentada</label>
    <type>Date</type>
</CustomField>