force-app/main/default/objects/Lead/fields/DataUltimaVisita__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaVisita__c</fullName>
    <description>Data da Última Visita ao Lead</description>
    <label>Data da Última Visita</label>
    <type>DateTime</type>
</CustomField>