force-app/main/default/objects/Lead/fields/DataVenda__c.field-meta.xml
<CustomField>
    <fullName>DataVenda__c</fullName>
    <description>Data que ocorreu a venda</description>
    <label>Data da Venda</label>
    <type>Date</type>
</CustomField>