force-app/main/default/objects/Lead/fields/DataVendaExclusivoOdonto__c.field-meta.xml
<CustomField>
    <fullName>DataVendaExclusivoOdonto__c</fullName>
    <label>Data da Venda do Exclusivo Odonto</label>
    <type>Date</type>
</CustomField>