force-app/main/default/objects/Lead/fields/DataVerificacaoSerasa__c.field-meta.xml
<CustomField>
    <fullName>DataVerificacaoSerasa__c</fullName>
    <label>Data verificação Serasa</label>
    <type>Date</type>
</CustomField>