force-app/main/default/objects/Lead/fields/DataVigencia__c.field-meta.xml
<CustomField>
    <fullName>DataVigencia__c</fullName>
    <label>Data de vigência</label>
    <type>Date</type>
</CustomField>