force-app/main/default/objects/Lead/fields/DataVigenciaExclusivoOdonto__c.field-meta.xml
<CustomField>
    <fullName>DataVigenciaExclusivoOdonto__c</fullName>
    <label>Data da Vigência Exclusivo Odonto</label>
    <type>Date</type>
</CustomField>