force-app/main/default/objects/Lead/fields/DetalhamentoCanal__c.field-meta.xml
<CustomField>
    <fullName>DetalhamentoCanal__c</fullName>
    <description>detalhamento do campo canal de entrada atual</description>
    <label>Detalhamento do Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ex-cliente Unimed-BH</fullName>
            </value>
            <value>
                <fullName>Ação Araújo</fullName>
            </value>
            <value>
                <fullName>Distribuição de leads sem proprietários</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>