force-app/main/default/objects/Lead/fields/DetalhamentoOrigem__c.field-meta.xml
<CustomField>
    <fullName>DetalhamentoOrigem__c</fullName>
    <description>Detalhamento do campo de origem do lead</description>
    <label>Detalhamento da Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lista Neoway</fullName>
            </value>
            <value>
                <fullName>Lead Scoring</fullName>
            </value>
            <value>
                <fullName>Página - Planos</fullName>
            </value>
            <value>
                <fullName>Página - Bem Digital</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Campanha - Odonto Exclusivo</fullName>
            </value>
            <value>
                <fullName>Campanha - Mude Para Unimed-BH</fullName>
            </value>
            <value>
                <fullName>Campanha - Pra Você</fullName>
            </value>
            <value>
                <fullName>Formulário</fullName>
                <isActive>false</isActive>
                <label>Formulário</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>