force-app/main/default/objects/Lead/fields/DetalhamentoOrigemHubSpot__c.field-meta.xml
<CustomField>
    <fullName>DetalhamentoOrigemHubSpot__c</fullName>
    <description>Detalhamento do campo de origem HubSpot, usado apenas quando a informação vier do HubSpot
ATENÇÃO!
ESTE CAMPO NÃO PODE SER ALTERADO SEM PRÉVIA AUTORIZAÇÃO DO MARKETING E VENDAS.</description>
    <label>Detalhamento da Origem HubSpot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>