force-app/main/default/objects/Lead/fields/DocumentoIdentificacao__c.field-meta.xml
<CustomField>
    <fullName>DocumentoIdentificacao__c</fullName>
    <defaultValue>&quot;Sem Informação&quot;</defaultValue>
    <description>Campo obrigatório onde possui a informação do documento de identificação (CPF ou CNPJ), quando este não é preenchido um texto padrão é informado a ele, até que exista a informação do documento de identificação.</description>
    <label>Documento de Identificação</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>